Add markdown link(minteglar)

--- a/Markdown/mark.html
+++ b/Markdown/mark.html
@@ -11,10 +11,10 @@
 
 <blockquote>
   <p>이부분은 blockquote 입니다.</p>
-  
-  <p>두번째 blockquote 입니다. </p>
-  
-  <h2>blockquote 부분의 H2 부분 입니다.</h2>
+
+<p>두번째 blockquote 입니다. </p>
+
+<h2>blockquote 부분의 H2 부분 입니다.</h2>
 </blockquote>
 
 <p>강조 구절:</p>
@@ -105,6 +105,10 @@ I start my morning with a cup of coffee and
 <p>I wish SmartyPants used named entities like <code>&amp;mdash;</code>
 instead of decimal-encoded entites like <code>&amp;#8212;</code>.</p>
 
-<p>Use the<code>printf ()</code> function.</p>
+<p>Use the <code>printf ()</code> function.</p>
 
 <p><code>There is a literal backtick (`) here.</code></p>
+
+<h2>좀더 자세히</h2>
+
+<p>http://dl.dropbox.com/u/13847585/markdown-usage.html</p>
